# ChangeLog for kde-misc/kdnssd-avahi
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/kdnssd-avahi/ChangeLog,v 1.25 2009/10/12 07:09:16 abcd Exp $

  12 Oct 2009; Jonathan Callen <abcd@gentoo.org> kdnssd-avahi-0.1.2.ebuild,
  kdnssd-avahi-0.1.2-r1.ebuild:
  QA fix: define IUSE

  22 Jun 2009; Jeroen Roovers <jer@gentoo.org> kdnssd-avahi-0.1.2-r1.ebuild:
  Stable for HPPA (bug #271889).

  10 Jun 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  kdnssd-avahi-0.1.2.ebuild, kdnssd-avahi-0.1.2-r1.ebuild:
  Change slot to 3.5

  06 Jun 2009; nixnut <nixnut@gentoo.org> kdnssd-avahi-0.1.2-r1.ebuild:
  ppc stable #271889

  06 Jun 2009; Markus Meier <maekke@gentoo.org>
  kdnssd-avahi-0.1.2-r1.ebuild:
  amd64/x86 stable, bug #271889

*kdnssd-avahi-0.1.2-r1 (27 Sep 2008)

  27 Sep 2008; Marcus D. Hanwell <cryos@gentoo.org>
  +kdnssd-avahi-0.1.2-r1.ebuild:
  Revision bumped version to install inside the KDE prefix, only used by KDE
  3.5, fixes bug 237830.

  04 Mar 2008; Ryan Hill <dirtyepic@gentoo.org> kdnssd-avahi-0.1.2.ebuild:
  Keyword ~mips.

  24 May 2007; Diego Pettenò <flameeyes@gentoo.org>
  kdnssd-avahi-0.1.2.ebuild:
  Check also for dbus useflag on avahi, as without that avahi-client is not
  built, and kdnssd-avahi will fail at configure for missing prerequisites.

  30 Apr 2007; Carsten Lohrke <carlo@gentoo.org> kdnssd-avahi-0.1.2.ebuild:
  Fix thinko.

  14 Feb 2007; Bryan Østergaard <kloeri@gentoo.org>
  kdnssd-avahi-0.1.2.ebuild:
  Stable on IA64, bug 165606.

  09 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  kdnssd-avahi-0.1.2.ebuild:
  Stable on alpha/amd64 wrt bug #164079.

  01 Feb 2007; Markus Rothe <corsair@gentoo.org> kdnssd-avahi-0.1.2.ebuild:
  Stable on ppc64; bug #164079

  31 Jan 2007; Joseph Jezak <josejx@gentoo.org> kdnssd-avahi-0.1.2.ebuild:
  Marked ppc stable for bug #164079.

  30 Jan 2007; Jeroen Roovers <jer@gentoo.org> kdnssd-avahi-0.1.2.ebuild: