@@ -437,6 +437,7 @@
 =kde-misc/kdmtheme-1.2.2
 =kde-misc/kdnssd-avahi-0.1.2
 =kde-misc/kdnssd-avahi-0.1.2-r1
+=kde-misc/kdnssd-avahi-0.1.2-r2
 =kde-misc/kdocker-1.3
 =kde-misc/kerry-0.2.1
 =kde-misc/kexchange-1.0
