@@ -1,6 +1,7 @@
 DIST kde-admindir-3.5.5.tar.bz2 187274 RMD160 24528f3bf94e7d1a1036b6e5af180719785839ed SHA1 b640d2606305201b0ec030555c324d326440efff SHA256 1aa56856e432839ec74a67ab33fc21b56ed4f1b4b5c60bfd5b953cb2d3423153
 DIST kdnssd-avahi_0.1.2.orig.tar.gz 569115 RMD160 a9ee8286931f60acddce338abcadf2447a803ab6 SHA1 ac7372beb6baa62dc99cc729ce3a2ff3c6300c7c SHA256 ec7075875b1e64910e6be4aecfbff691964079abcd1b2ac46d066e836bd5b8fb
 EBUILD kdnssd-avahi-0.1.2-r1.ebuild 1138 RMD160 445871d0ed40007dd5d53e3144aa25c2e78ccb68 SHA1 2db76fcecb3a83b60b2fa3f078f10be5fdb2fb6f SHA256 eb90c3c1c349b91b7410188e7369d8ded2464c893861c45dc11d1d4886383d1d
+EBUILD kdnssd-avahi-0.1.2-r2.ebuild 804 RMD160 da00af20128050963928b5872254ad318de8658b SHA1 9cdbb7ae6fd5b07b56f33592a076952de98b95da SHA256 d15d26e0738d168f58e728d3bf290ae64d6d5577be5eed8730e469d1436af1e2
 EBUILD kdnssd-avahi-0.1.2.ebuild 1132 RMD160 1132177eee5ce5cb2c6a96c0efe78befec0d1835 SHA1 b0926943324b5630ab231ed10bed8c441e4f0222 SHA256 22ec860cc502ad004b364cb0073c90e3ab98d8a806beed4d4fbb5e15eed252a3
-MISC ChangeLog 3348 RMD160 9c96467e2ed77feb834e6c86e54bf17cd2827698 SHA1 23f35244e7e469db6413f268bcef7791dcdc3ec7 SHA256 a81688a4cf24776cee02245bbd6d09acce5a4eaa4c2674778409f256ab43a7cd
+MISC ChangeLog 3531 RMD160 67daeef7aefdbcab52387f524bc2709bcc4493b3 SHA1 3a089729ff99a13ab04bee7d9df434fbc95ce69b SHA256 bdfb704999f23be0a72228b1342fece1616223aaf71f9afb6d9ba23b75d0d39b
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
