@@ -1,6 +1,12 @@
 # ChangeLog for kde-misc/kdnssd-avahi
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/kde-misc/kdnssd-avahi/ChangeLog,v 1.25 2009/10/12 07:09:16 abcd Exp $
+
+*kdnssd-avahi-0.1.2-r2 (11 Feb 2010)
+
+  11 Feb 2010; Martin von Gagern (MvG) <Martin.vGagern@gmx.net>
+  +kdnssd-avahi-0.1.2-r2.ebuild:
+  Port to EAPI=2 to avoid built_with_use calls
 
   12 Oct 2009; Jonathan Callen <abcd@gentoo.org> kdnssd-avahi-0.1.2.ebuild,
   kdnssd-avahi-0.1.2-r1.ebuild:
